[gd_scene load_steps=39 format=3 uid="uid://dlf6hxidshpwa"]

[ext_resource type="Script" uid="uid://chr7dkddrbivg" path="res://Enemies/Scripts/Skeleton/enemy.gd" id="1_ai62a"]
[ext_resource type="Texture2D" uid="uid://codefx624tom1" path="res://RawAssets/UI/HealthBar-Under.png" id="2_3p1vi"]
[ext_resource type="Texture2D" uid="uid://em7e8q3ug5p" path="res://RawAssets/UI/HealthBar-Over.png" id="3_7x6q2"]
[ext_resource type="Texture2D" uid="uid://q3mgdocanxe6" path="res://RawAssets/UI/HealthBar-Progress.png" id="4_bhwqq"]
[ext_resource type="PackedScene" uid="uid://dmtjwnplrp0ai" path="res://GeneralNodes/HitBox/hit_box.tscn" id="5_hjk60"]
[ext_resource type="PackedScene" uid="uid://b0tveje31v05e" path="res://GeneralNodes/HurtBox/hurt_box.tscn" id="6_8h80y"]
[ext_resource type="Texture2D" uid="uid://chwnfdlvlqd0l" path="res://RawAssets/Overworld/Enemies/Skeleton/Skeleton_Mage.png" id="7_xcloq"]
[ext_resource type="AudioStream" uid="uid://v3xoftiyq2fx" path="res://Enemies/Skeleton/Audio/bone-break-sound.mp3" id="8_7bf3p"]
[ext_resource type="Script" uid="uid://dn0p0ggcplfhq" path="res://Enemies/Scripts/Skeleton/enemy_state_machine.gd" id="9_dqm2f"]
[ext_resource type="Script" uid="uid://b8a6cwal6ag4m" path="res://Enemies/Scripts/Skeleton/enemy_idle.gd" id="10_mke3h"]
[ext_resource type="Script" uid="uid://br0c4ft0f0obr" path="res://Enemies/Scripts/Skeleton/enemy_wander.gd" id="11_prslq"]
[ext_resource type="Script" uid="uid://b0q3n14kexp5y" path="res://Enemies/Scripts/Skeleton/enemy_stun.gd" id="12_kc3rn"]
[ext_resource type="Script" uid="uid://b05lxsb8340x7" path="res://Enemies/Scripts/Skeleton/enemy_destroy.gd" id="13_g0lj5"]
[ext_resource type="Script" uid="uid://cm3amku6ob3n1" path="res://Enemies/Scripts/Skeleton/enemy_projectile.gd" id="14_t0ded"]
[ext_resource type="Script" uid="uid://bcdvk4ta3o6ru" path="res://Enemies/Scripts/drop_data.gd" id="14_umes6"]
[ext_resource type="Resource" uid="uid://6dfurlo3iglo" path="res://Items/potion.tres" id="15_j2svb"]
[ext_resource type="PackedScene" uid="uid://blm3ubb7wel5f" path="res://Enemies/vision_area.tscn" id="15_yunos"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2l4fc"]
radius = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fas4u"]
radius = 3.0
height = 8.0

[sub_resource type="Animation" id="Animation_wraiv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProjectileArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -4)]
}

[sub_resource type="Animation" id="Animation_r4n41"]
resource_name = "destroy_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [72, 75]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.654322,
"start_offset": 0.0451257,
"stream": ExtResource("8_7bf3p")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_4w4cy"]
resource_name = "destroy_side"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [72, 75]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.654322,
"start_offset": 0.0451257,
"stream": ExtResource("8_7bf3p")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_4hb5x"]
resource_name = "destroy_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [72, 75]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.654322,
"start_offset": 0.0451257,
"stream": ExtResource("8_7bf3p")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_5bswo"]
resource_name = "fire_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [48, 55]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProjectileArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -4)]
}

[sub_resource type="Animation" id="Animation_8k7a2"]
resource_name = "fire_side"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [56, 63]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProjectileArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, -5)]
}

[sub_resource type="Animation" id="Animation_xxjp7"]
resource_name = "fire_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [64, 71]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProjectileArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -12)]
}

[sub_resource type="Animation" id="Animation_t201c"]
resource_name = "idle_down"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}

[sub_resource type="Animation" id="Animation_ghxct"]
resource_name = "idle_side"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}

[sub_resource type="Animation" id="Animation_hy57w"]
resource_name = "idle_up"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 21]
}

[sub_resource type="Animation" id="Animation_3p5c5"]
resource_name = "stun_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [80, 83]
}

[sub_resource type="Animation" id="Animation_k7hrb"]
resource_name = "stun_side"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [88, 91]
}

[sub_resource type="Animation" id="Animation_tkikq"]
resource_name = "stun_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [96, 99]
}

[sub_resource type="Animation" id="Animation_oecpi"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 29]
}

[sub_resource type="Animation" id="Animation_00et6"]
resource_name = "walk_side"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [32, 37]
}

[sub_resource type="Animation" id="Animation_nbjcd"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [40, 45]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0fvnx"]
_data = {
&"RESET": SubResource("Animation_wraiv"),
&"destroy_down": SubResource("Animation_r4n41"),
&"destroy_side": SubResource("Animation_4w4cy"),
&"destroy_up": SubResource("Animation_4hb5x"),
&"fire_down": SubResource("Animation_5bswo"),
&"fire_side": SubResource("Animation_8k7a2"),
&"fire_up": SubResource("Animation_xxjp7"),
&"idle_down": SubResource("Animation_t201c"),
&"idle_side": SubResource("Animation_ghxct"),
&"idle_up": SubResource("Animation_hy57w"),
&"stun_down": SubResource("Animation_3p5c5"),
&"stun_side": SubResource("Animation_k7hrb"),
&"stun_up": SubResource("Animation_tkikq"),
&"walk_down": SubResource("Animation_oecpi"),
&"walk_side": SubResource("Animation_00et6"),
&"walk_up": SubResource("Animation_nbjcd")
}

[sub_resource type="Resource" id="Resource_evg3c"]
script = ExtResource("14_umes6")
item = ExtResource("15_j2svb")
probability = 100.0
min_amount = 1
max_amount = 10
metadata/_custom_type_script = "uid://bcdvk4ta3o6ru"

[sub_resource type="CircleShape2D" id="CircleShape2D_cipd7"]
radius = 89.0056

[node name="SkeletonMage" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 256
collision_mask = 16
script = ExtResource("1_ai62a")

[node name="EnemyHealthProgressBar" type="TextureProgressBar" parent="."]
visible = false
z_index = 1
z_as_relative = false
offset_left = -8.0
offset_top = -30.0
offset_right = 9.0
offset_bottom = -13.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("2_3p1vi")
texture_over = ExtResource("3_7x6q2")
texture_progress = ExtResource("4_bhwqq")

[node name="HitBox" parent="." instance=ExtResource("5_hjk60")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_2l4fc")

[node name="HurtBox" parent="." instance=ExtResource("6_8h80y")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_2l4fc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("7_xcloq")
hframes = 8
vframes = 13
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_fas4u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0fvnx")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("9_dqm2f")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("after_idle_state")]
script = ExtResource("10_mke3h")
after_idle_state = NodePath("../Wander")

[node name="Wander" type="Node" parent="StateMachine" node_paths=PackedStringArray("after_wander_state")]
script = ExtResource("11_prslq")
after_wander_state = NodePath("../Idle")

[node name="Stun" type="Node" parent="StateMachine" node_paths=PackedStringArray("after_stun_state")]
script = ExtResource("12_kc3rn")
after_stun_state = NodePath("../Projectile")

[node name="Destroy" type="Node" parent="StateMachine"]
script = ExtResource("13_g0lj5")
drops = Array[ExtResource("14_umes6")]([SubResource("Resource_evg3c")])

[node name="Projectile" type="Node" parent="StateMachine" node_paths=PackedStringArray("vision_area", "attack_area", "after_projectile_state", "after_player_dead_state")]
script = ExtResource("14_t0ded")
vision_area = NodePath("../../VisionArea")
attack_area = NodePath("../../HurtBox")
after_projectile_state = NodePath("../Idle")
after_player_dead_state = NodePath("../Idle")

[node name="Timer" type="Timer" parent="StateMachine/Projectile"]
wait_time = 4.0
autostart = true

[node name="VisionArea" parent="." instance=ExtResource("15_yunos")]
scale = Vector2(0.775759, 0.758478)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_cipd7")
debug_color = Color(0.993088, 0, 0.242752, 0.42)

[node name="ProjectileArea" type="Marker2D" parent="."]
position = Vector2(-6, -4)

[connection signal="timeout" from="StateMachine/Projectile/Timer" to="StateMachine/Projectile" method="_on_timer_timeout"]
